# src/modules/store_module/store_route.go
@@ -12,5 +12,10 @@ func (m module) Routes(route fiber.Router, middleware *middlewares.Middleware) {
 	store := v1.Group("stores")
 	store.Get("", func(c *fiber.Ctx) error { return m.Controller().GetStores(c) })
 	store.Get(":id", func(c *fiber.Ctx) error { return m.Controller().GetStore(c) })
+	store.Put(":id", func(c *fiber.Ctx) error { return m.Controller().UpdateStore(c) })
+	store.Put(":id/logo", func(c *fiber.Ctx) error { return m.Controller().UploadLogo(c) })
+	store.Delete(":id/logo", func(c *fiber.Ctx) error { return m.Controller().DeleteLogo(c) })
+	store.Put(":id/signature", func(c *fiber.Ctx) error { return m.Controller().UploadSignature(c) })
+	store.Delete(":id/signature", func(c *fiber.Ctx) error { return m.Controller().DeleteSignature(c) })
 	store.Get(":storeId/last-prices", func(c *fiber.Ctx) error { return m.Controller().GetLastPrices(c) })
 }
